<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2021 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Now in Android</string>
    <string name="not_connected">⚠️ You aren’t connected to the internet</string>
    <string name="foryou_title">For you</string>
    <string name="bookmarks_title">Saved</string>
    <string name="search_interests">Interests</string>
    <!--    Added for testing purposes-->
    <string name="navigate_up">Navigate up</string>
    <string name="feature_topic_select_an_interest">Select an Interest</string>

</resources>
